<resources>
    <string name="app_name">ITopper</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">abhishekpandey817827@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maths">maths</string>
    <string name="myprefrence">"com.abc.com.MyPref"</string>
    <string name="myprefkey">"com.abc.com.MyPrefKey"</string>
    <string name="phy">Physics</string>
    <string name="che">Chemistry</string>
    <string name="mat">Maths</string>
    <string name="jeem">Jee Mains</string>
    <string name="jeea">JeeAdvanced</string>
    <string name="kvpy">kVPY</string>
    <string name="video">Video</string>
    <string name="note">Notes</string>
    <string name="book">Books</string>
    <string name="nes">NCERT Exercise Solution</string>
    <string name="nees">NCERT Examler Solution</string>
    <string name="ciq">CBSE Important Questions</string>
    <string name="ss">Solve Samplepaper</string>
    <string name="uns">UnSolve Samplepaper</string>
    <string name="k1"> KVPY Sylllabus</string>
    <string name="k2">KVPY-2017-Sample Paper  </string>
    <string name="k3">KVPY-2017-Sample Paper </string>
    <string name="k4"> KVPY-2016-Sample Paper </string>
    <string name="k5"> KVPY-2016-Answer_Keys</string>
    <string name="k6">KVPY-2016-Sample Paper  </string>
    <string name="k7"> KVPY-2016-Sample Paper </string>
    <string name="k8"> KVPY-2015-Sample Paper </string>
    <string name="k9"> KVPY-2014-Sample Paper </string>
    <string name="k10">KVPY-2013-Sample Paper  </string>
    <string name="k11">KVPY-2012-Sample Paper  </string>
    <string name="k12"> KVPY-2011-Sample Paper </string>
    <string name="kk2"> Stream-SB-SX</string>
    <string name="kk3">Stream-SB-SX ,5 Novem.. </string>
    <string name="kk4"> Stream-SB-SX ,19 Novem..</string>
    <string name="kk5">Stream-SB </string>
    <string name="kk6"> Stream-SX</string>
    <string name="n1">NSTSE-SamplesPapers</string>
    <string name="n2">  QuestionPapers 2012</string>
    <string name="n3"> NSTSE-SamplesPapers</string>
    <string name="n4">Solutions 2012 </string>
    <string name="n5"> NSTSE-2011</string>
    <string name="n6"> Solved SamplesPapers</string>
    <string name="n7">NSTSE-2010 </string>
    <string name="n8">Solved SamplesPapers </string>
    <string name="n9">NSTSE-2009 </string>
    <string name="n10">Solved SamplesPapers </string>
    <string name="j1"> JEE Main 2018 Paper</string>
    <string name="j2">JEE Main 2017 Paper </string>
    <string name="j3"> JEE Main 2016 Paper</string>
    <string name="j4"> JEE Main 2015 Paper</string>
    <string name="j5">JEE Main 2014 Paper </string>
    <string name="jj1">Set-A with Soution</string>
    <string name="jj2">Set-B with Soution</string>
    <string name="jj3"> Set-C with Soution</string>
    <string name="jj4"> Set-D with Soution</string>
    <string name="ja1">JEE Advance 2017 Paper1 </string>
    <string name="ja2">JEE Advance 2016 Paper1  </string>
    <string name="ja3">JEE Advance 2015 Paper1  </string>
    <string name="ja11">JEE Advance 2014 Paper1  </string>
    <string name="ja4">JEE Advance 2013 Paper1  </string>
    <string name="ja5">JEE Advance 2012 Paper1  </string>
    <string name="ja6">JEE Advance 2017 Paper2 </string>
    <string name="ja7">JEE Advance 2016 Paper2  </string>
    <string name="ja8">JEE Advance 2015 Paper2  </string>
    <string name="ja12">JEE Advance 2014 Paper2  </string>
    <string name="ja9">JEE Advance 2013 Paper2  </string>
    <string name="ja10">JEE Advance 2012 Paper2  </string>
    <string name="jja1">  Physics  Paper1</string>
    <string name="jja2">Chemistry Paper1 </string>
    <string name="jja3">  Maths  Paper1</string>
    <string name="jja4">  Physics  Paper2</string>
    <string name="jja5">Chemistry Paper2 </string>
    <string name="jja6">  Maths  Paper2</string>
    <string name="notes">  Revision Notes</string>
    <string name="books"> NCERT books</string>
    <string name="imque">Important Questions</string>
    <string name="a1">Chapter 1  </string>
    <string name="a2">Chapter 2  </string>
    <string name="a3">Chapter 3  </string>
    <string name="a4">Chapter 4  </string>
    <string name="a5">Chapter 5  </string>
    <string name="a6">Chapter 6  </string>
    <string name="a7">Chapter 7  </string>
    <string name="a8">Chapter 8  </string>
    <string name="a9">Chapter 9  </string>
    <string name="a10">Chapter 10  </string>
    <string name="a11">Chapter 11 </string>
    <string name="a12">Chapter 12 </string>
    <string name="a13">Chapter 13 </string>
    <string name="a14">Chapter 14 </string>
    <string name="a15">Chapter 15 </string>
    <string name="a16">Chapter 16 </string>
    <string name="a17">Chemistry Part2</string>
    <string name="a18">Chemistry Part1</string>
    <string name="ap16">Physics Part2</string>
    <string name="ap17">Physics Part1</string>
    <string name="am14">Maths Part2</string>
    <string name="am15">Maths Part1</string>
    <string name="a2a3">Chapter 2 and 3</string>
    <string name="a1a2">Chapter 1 and 2</string>
    <string name="a4a5">Chapter 4 and 5</string>
    <string name="a6a7">Chapter 6 and 7</string>
    <string name="a9a10">Chapter 9 and 10</string>
    <string name="a12a13">Chapter 12 and 13</string>
    <string name="p1">Electric Charges and Fields   </string>
    <string name="p2">Electrostatic Potential and C.</string>
    <string name="p3">Current Electricity           </string>
    <string name="p4">Moving Charges and Magnetism  </string>
    <string name="p5">Magnetism And Matter          </string>
    <string name="p6">Electromagnetic Induction     </string>
    <string name="p7">Alternating Current           </string>
    <string name="p8">Electromagnetic Waves </string>
    <string name="p9">Ray Optics and Optical Instruments  </string>
    <string name="p10">Wave Optics </string>
    <string name="p11">Dual Nature of Radiation and Matter </string>
    <string name="p12">Atoms  </string>
    <string name="p13">Nuclei  </string>
    <string name="p14">Semiconductor Electronic: Material.Devices And Simple</string>
    <string name="p15">Communication Systems</string>
    <string name="p16">PhysicsII/Answers</string>
    <string name="p17">PhysicsI/Answers</string>
    <string name="p1p2">Electrostatics</string>
    <string name="p4p5">Magnetic effects of current and magnetism</string>
    <string name="p6p7">Electromagnetic Induction and Alternating Current </string>
    <string name="p9p10">Optics</string>
    <string name="p12p13">Atoms and Nuclei </string>
    <string name="p14p">Electronic Devicess</string>
    <string name="c1">The Solid State</string>
    <string name="c2">Solutions</string>
    <string name="c3">Electrochemistry</string>
    <string name="c4">Chemical Kinetics</string>
    <string name="c5">Surface Chemistry</string>
    <string name="c6">General Principles Processes of Isolation of Elements</string>
    <string name="c7">The p-Block Elements</string>
    <string name="c8"> The d and f Block Elements</string>
    <string name="c9">Coordination Compounds</string>
    <string name="c10">Haloalkanes and Haloarenes</string>
    <string name="c11">Alcohols, Phenols and Ethers</string>
    <string name="c12">Aldehydes, Ketones , Carboxylic Acids</string>
    <string name="c13">Amines</string>
    <string name="c14">Biomolecules</string>
    <string name="c15">Polymers</string>
    <string name="c16">Chemistry in Everyday life</string>
    <string name="c17">ChemistryII/Answers</string>
    <string name="c18">ChemistryI/Answers</string>
    <string name="m1">Relations and Functions</string>
    <string name="m2">Inverse Trigonometric Functions</string>
    <string name="m3">Matrices          </string>
    <string name="m4">Determinants</string>
    <string name="m5">Continuity and Differentiability</string>
    <string name="m6">Application of Derivatives</string>
    <string name="m7">Integrals Revision Notes</string>
    <string name="m8">Application of Integrals</string>
    <string name="m9">Differential Equations</string>
    <string name="m10">Vector Algebra</string>
    <string name="m11">Three Dimensional Geometry</string>
    <string name="m12">Linear Programming</string>
    <string name="m13">Probability </string>
    <string name="m14">MathsII/Answers</string>
    <string name="m15">MathsI/Answers</string>
    <string name="m2m3">Matrices and Determinants </string>
    <string name="sss"> CBSE  Sample Papers</string>
    <string name="ssss"> CBSE Sample Papers</string>
    <string name="s1"> Sample Question Paper 1</string>
    <string name="s2">Sample Question Paper 2</string>
    <string name="s3">  Sample Question Paper 3</string>
    <string name="s4">  Sample Question Paper 4</string>
    <string name="s5">  Sample Question Paper 5</string>
    <string name="s6">  Sample Question Paper 6</string>
    <string name="s7"> Sample Question Paper 7</string>
    <string name="s8">  Sample Question Paper 8</string>
    <string name="s9">  Sample Question Paper 9</string>
    <string name="s10">  Sample Question Paper 10</string>
    <string name="es">  NCERT Exemplar Problems with Solutions</string>
    <string name="ess"> NCERT Exemplar Problems with Solutions</string>
    <string name="pv1">  16 Video</string>
    <string name="pv2">  15 Video</string>
    <string name="pv3">  21 Video</string>
    <string name="pv4">  16 Video</string>
    <string name="pv5">  8 video</string>
    <string name="pv6">  9 Video</string>
    <string name="pv7">  12 Video</string>
    <string name="pv8">  4 Video</string>
    <string name="pv9">  17 Video</string>
    <string name="pv10">  14 Video</string>
    <string name="pv11">  4 Video</string>
    <string name="pv12">  3 Video</string>
    <string name="pv13">  5 Video</string>
    <string name="pv14">  16 Video</string>
    <string name="pv15">  7 Video</string>
    <string name="cv1">  7 Video</string>
    <string name="cv2">  6 Video</string>
    <string name="cv3">  8 Video</string>
    <string name="cv4">  5 Video</string>
    <string name="cv5">  7 Video</string>
    <string name="cv6">  7 Video</string>
    <string name="cv7">  13 Video</string>
    <string name="cv8">  6 Video</string>
    <string name="cv9">  7 Video</string>
    <string name="cv10">  6 Video</string>
    <string name="cv11">  7 Video</string>
    <string name="cv12">  9 Video</string>
    <string name="cv13">  6 Video</string>
    <string name="cv14">  5 Video</string>
    <string name="cv15">  3 Video</string>
    <string name="mv1">  8 Video</string>
    <string name="mv2">  4 Video</string>
    <string name="mv3">  7 Video</string>
    <string name="mv4">  7 Video</string>
    <string name="mv5">  16 Video</string>
    <string name="mv6">  12 Video</string>
    <string name="mv7">  16 Video</string>
    <string name="mv8">  3 Video</string>
    <string name="mv9">  7 Video</string>
    <string name="mv10">  6 Video</string>
    <string name="mv11">  5 Video</string>
    <string name="mv12">  4 Video</string>
    <string name="mv13">  10 Video</string>
    <string name="pc1v1">Electric charge part-1 </string>
    <string name="pc1v2"> Electric charge part-2 </string>
    <string name="pc1v3"> Coulumbs Law </string>
    <string name="pc1v4">  Numerical Coulumbs Law -1 </string>
    <string name="pc1v5">  Numerical coulombs law part-2</string>
    <string name="pc1v6"> Electric field Intro  </string>
    <string name="pc1v7"> Electric Field lines  </string>
    <string name="pc1v8"> Electric dipole  </string>
    <string name="pc1v9">  Dipole-2 </string>
</resources>